Fortran/IBM/compile/F2008/intrinsics/error/unit_tests/erfc_scaled01d.vf
** _main   === End of Compilation 1 ===
1501-510  Compilation successful for file erfc_scaled01.f.
